--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_install:
 script:
 - fgt golint $(find . | grep .go$ | grep -v server.pb.go)
 - go test ./...
-#- $HOME/gopath/bin/goveralls -service=travis-ci -ignore=syncapi.go github.com/brotherlogic/discogssyncer
+#- $HOME/gopath/bin/goveralls -service=travis-ci -ignore=recordget.go github.com/brotherlogic/recordgetter
